--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=Laravel
-APP_ENV=local
+APP_NAME="Article Admin App"
+APP_ENV=prod
 APP_KEY=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=https://seagreen-llama-330814.hostingersite.com/
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -19,13 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=pgsql
-DB_HOST="${{Postgres.PGHOST}}"
-DB_PORT="${{Postgres.PGPORT}}"
-DB_DATABASE="${{Postgres.PGDATABASE}}"
-DB_USERNAME="${{Postgres.PGUSER}}"
-DB_PASSWORD="${Postgres.PGPASSWORD}}"
-DB_URL="${{Postgres.DATABASE_PUBLIC_URL}}"
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE="u824591511_article_app"
+DB_USERNAME="u824591511_christian"
+DB_PASSWORD="012012password!A"
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
